# DistMind

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
model/: index.py
modelsettings/: model_list_seed_bert.txt  model_list_seed_den.txt  model_list_seed_gpt.txt  model_list_seed_inc.txt  model_list_seed_res.txt
scripts/: get_resource.sh  launch_distmind_server_part.sh  launch_store_client.sh  run_cache.sh  run_client_fixed_inference.sh  run_client_max_inference.sh  run_client_max_train.sh  run_client_one.sh  run_controller.sh  run_deploy.sh  run_distmind_test3.sh  run_generate.sh  run_gpu_util.sh  run_load_balancer.sh  run_metadata.sh  run_server.sh  run_storage.sh  run_train.sh  run_train_controller.sh  run_workload.sh  shutdown_distmind_server_part.sh
source/: CMakeLists.txt
source/cache/: CMakeLists.txt  cache.cpp  lb_agent.cpp  lb_agent.h  model_manager.cpp  model_manager.h  storage_agent.cpp  storage_agent.h
source/client/: CMakeLists.txt  client.py  client_concurrent.py  client_fixed_inference.py  client_fixed_rate.py  client_max_inference.py  client_max_rate.py  client_max_train.py  client_one.py  client_template.py  common.py  requests.txt
source/controller/: CMakeLists.txt  controller.py  controller_agent.py
source/deployment/: CMakeLists.txt  generate_model_distribution.py  generate_model_list.py
source/deployment/deploy_file/: CMakeLists.txt  deploy_file.py
source/deployment/deploy_file/cpp_extension/: CMakeLists.txt  deploy_file.cpp
source/deployment/generate_file/: CMakeLists.txt  generate_file.py
source/deployment/generate_file/cpp_extension/: CMakeLists.txt  generate_file.cpp
source/des_eval/: eval.py
source/lb_lfu/: CMakeLists.txt  base_agent.h  cache_agent.cpp  client_agent.cpp  client_agent.h  controller_client.cpp  data_type.h  dispatcher.h  load_balancer.cpp  metadata_manager.cpp  metadata_manager.h  server_agent.cpp  server_agent.h
source/lb_lfu/strategy/: CMakeLists.txt  basic_strategy.cpp  basic_strategy.h  strategy.cpp  strategy.h
source/load_balancer/: CMakeLists.txt  Makefile  cache_agent.cpp  cache_agent.h  client_agent.cpp  client_agent.h  controller_client.h  data_type.h  dispatcher.h  load_balancer.cpp  metadata_manager.cpp  metadata_manager.h  server_agent.cpp  server_agent.h
source/metadata_storage/: CMakeLists.txt  metadata_storage.cpp
source/mps/: README.md  gpu_worker.py  launch_mps_daemon.py  load_balancer.py  load_models.py  lru.py  model_list.txt  mp_queue.py  server_agent.py  shutdown_mps_daemon.py
source/py_utils/: CMakeLists.txt  check_client.py  launch_remote.py  ssh_comm.py  tcp.py
source/ray_benchmark/: aggregate_stats.py  check_latency.py  generate_requests.py  generate_server_list.py  pt_example.py  tcp.py
source/ray_benchmark/controller/: controller.py  controller_agent.py  model_list.txt  server_list.txt
source/server/: CMakeLists.txt  server.py
source/server/cpp_extension/: CMakeLists.txt  cache_agent.cpp  cache_agent.h  core_loop.cpp  core_loops.h  lb_agent.cpp  lb_agent.h  operations.cpp  operations.h
source/server/cpp_extension/torch/: CMakeLists.txt  interface.cpp  interface.h  setup.py
source/storage/: CMakeLists.txt  store_serv.cpp
source/storage_client/: CMakeLists.txt  cli_common.hpp  deploy_bins.cpp  generate_bins.py  shard_client.cpp  shard_ctl.cpp  store_cli.cpp  stress_test.cpp
source/tools/: CMakeLists.txt  gpu_util.py
source/utils/: CMakeLists.txt  utils.h
source/utils/common/: atomic.h  errno.h  global.h  pointer.h  time.h
source/utils/efa_adaptor/: CMakeLists.txt  efa_adaptor.h  efa_adpator.cpp  efa_ep.cpp  efa_ep.h  shm_common.cpp  shm_common.h  util.cpp
source/utils/memory_manager/: CMakeLists.txt  memory_manager.cpp  memory_manager.h
source/utils/shared_memory/: CMakeLists.txt  shared_memory.cpp  shared_memory.h
source/utils/tcp/: CMakeLists.txt  tcp.cpp  tcp.h
source/utils/tcp_pattern/: CMakeLists.txt  tcp_pattern.cpp  tcp_pattern.h
source/workload/: CMakeLists.txt  new_workload.py
(+87 files in other folders)
