PROJECT(pipeps)

ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(py_utils)

ADD_SUBDIRECTORY(metadata_storage)
ADD_SUBDIRECTORY(deployment)
ADD_SUBDIRECTORY(workload)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(load_balancer)
ADD_SUBDIRECTORY(lb_lfu)
ADD_SUBDIRECTORY(cache)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(storage)
ADD_SUBDIRECTORY(storage_client)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(controller)