PROJECT(deploy_generate)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

AUX_SOURCE_DIRECTORY(. DIR_DEPLOY_GENERATE_SRCS)
find_library(TORCH_PYTHON_LIBRARY torch_python PATH "${TORCH_INSTALL_PREFIX}/lib")
PYBIND11_ADD_MODULE(deploy_generate_c ${DIR_DEPLOY_GENERATE_SRCS})
TARGET_LINK_LIBRARIES(deploy_generate_c PUBLIC utils;${TORCH_LIBRARIES};${TORCH_PYTHON_LIBRARY})