PROJECT(server_torch_c)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

AUX_SOURCE_DIRECTORY(. DIR_SERVER_TORCH_C_SRCS)
PYBIND11_ADD_MODULE(server_torch_c ${DIR_SERVER_TORCH_C_SRCS})
find_library(TORCH_PYTHON_LIBRARY torch_python PATH "${TORCH_INSTALL_PREFIX}/lib")
TARGET_LINK_LIBRARIES(server_torch_c PUBLIC utils;${TORCH_LIBRARIES};${TORCH_PYTHON_LIBRARY})